Fix spacing for precise location map section.

--- a/sass/compat/plugins/shipping-zones-by-drawing-premium/_maps.scss
+++ b/sass/compat/plugins/shipping-zones-by-drawing-premium/_maps.scss
@@ -8,6 +8,7 @@ body .fc-step__substep[data-substep-id="payment"] #szbd_checkout_field {
 
 
 
-body .fc-step__substep[data-substep-id="shipping_address"] #szbd_checkout_field + .woocommerce-shipping-fields {
+body .fc-step__substep[data-substep-id="shipping_address"] #szbd_checkout_field + .woocommerce-shipping-fields,
+body .fc-step__substep[data-substep-id="shipping_address"] .woocommerce-shipping-fields + #szbd_checkout_field {
 	margin-top: $global-spacing-small;
 }
